[package]
name = "winit-executor"
version = "0.1.0"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
edition = "2018"
repository = "https://github.com/lperlaki/winit-executor-rs"
description = "Executor build on winit"
license = "MIT"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit="0.20"
futures="0.3"
crossbeam-channel = "0.4"
once_cell="1.3"



